--- a/pages/resetPassword.html
+++ b/pages/resetPassword.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="/jquery/jquery.min.js"></script>
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-    
+
     <!-- Custom styles for this template -->
     <link href="scrumFormat.css" rel="stylesheet">
      </head>
@@ -32,9 +32,9 @@
             <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown" id="notificationsButton"><span class="badge badge-error" id="notificationsBadge">
                             <i class="glyphicon glyphicon-bell"></i>
                             <div id = "counter">
-                            
+
                             </div>
-                            </span>  
+                            </span>
                         </a>
 
                         <ul class="dropdown-menu" id="notificationsPanel">
@@ -58,6 +58,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a id="navBarUsername" href="loginAndRegister.html"></a></li>
+            <li><a id="btnlogOut" onclick="logOut();" style="display:none;">Log Out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
