--- a/pages/404.html
+++ b/pages/404.html
@@ -63,6 +63,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a id="navBarUsername" href="loginAndRegister.html"></a></li>
+            <li><a id="btnlogOut" onclick="logOut();" style="display:none;">Log Out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
