--- a/pages/postManagement.html
+++ b/pages/postManagement.html
@@ -74,6 +74,7 @@
                     <li>
                         <a id="navBarUsername" href="loginAndRegister.html"></a>
                     </li>
+                    <li><a id="btnlogOut" onclick="logOut();" style="display:none;">Log Out</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
