--- a/pages/findfood.html
+++ b/pages/findfood.html
@@ -84,7 +84,7 @@
 
         <!--Initial data when landing on page-->
         <div class="scrumFormat" id="testing">
-            <h1>Find Food Posts</h1>
+            <h1>Find Food Posts<br><h5> Click Search to see Posts on the Map! Click <span class="glyphicon glyphicon-eye-open"></span> to see more detail</h5></h1>
 
 
             <!-- Load results by location (done by gps?) -->
@@ -356,7 +356,7 @@
     <script type="text/javascript" src="findFoodTwo.js"></script>
     <script type="text/javascript" src="globalFunctions.js"></script>
     <script type="text/javascript" src="notifications.js"></script>
-   <!-- <script type="text/javascript" src="mapScripts.js"></script>-->
+   <script type="text/javascript" src="mapScripts.js"></script>
 </body>
 
 </html>
