maps correct jquery

--- a/pages/maps_prototype.html
+++ b/pages/maps_prototype.html
@@ -3,7 +3,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" /> 
-		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="/jquery/jquery.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
 		<link href="mapStyle.css" rel="stylesheet">
