Added basic recommendations.

--- a/pages/postfood.html
+++ b/pages/postfood.html
@@ -290,8 +290,9 @@
     <script src="/quagga/quagga.js"></script>
     <!-- Our own JS -->
     <script type="text/javascript" src="postfood.js"></script>
-    <script type="text/javascript" src="globalFunctions.js"></script>
+    <script type="text/javascript" src="dataAnalysis.js"></script>
     <script type="text/javascript" src="notifications.js"></script>
+    <script type="text/javascript" src="globalFunctions.js"></script>
 </body>
 
 </html>
