--- a/pages/account.html
+++ b/pages/account.html
@@ -119,9 +119,9 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="dataAnalysis.js"></script>
+    <script type="text/javascript" src="notifications.js"></script>
     <script type="text/javascript" src="globalFunctions.js"></script>
-    <script type="text/javascript" src="notifications.js">
-    </script>
     <script>
 
     </script>
