--- a/pages/postManagement.html
+++ b/pages/postManagement.html
@@ -126,9 +126,9 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="dataAnalysis.js"></script>
     <script type="text/javascript" src="postManagement.js"></script>
-    <script type="text/javascript" src="globalFunctions.js">
-    </script>
+    <script type="text/javascript" src="globalFunctions.js"></script>
     <script type="text/javascript" src="notifications.js"></script>
 </body>
 
