--- a/pages/resetPassword.html
+++ b/pages/resetPassword.html
@@ -84,7 +84,8 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="globalFunctions.js"></script>
     <script type="text/javascript" src="resetPassword.js"></script>
+    <script type="text/javascript" src="dataAnalysis.js"></script>
+    <script type="text/javascript" src="globalFunctions.js"></script>
   </body>
 </html>
