Fixed double mapScripts.js // readability
And leaflet no longer on cdn, DO NPM INSTALL

--- a/pages/maps_prototype.html
+++ b/pages/maps_prototype.html
@@ -1,16 +1,16 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" /> 
+		<link rel="stylesheet" href="/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/leaflet/leaflet.css" />
     <script type="text/javascript" src="/jquery/jquery.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+		<script src="/leaflet/leaflet.js"></script>
 		<link href="mapStyle.css" rel="stylesheet">
 	</head>
 	<body onload="setUp()">
 		<div id="mapid"> </div>
+		<script type="text/javascript" src="mapScripts.js"></script>
 	</body>
-<script type="text/javascript" src="mapScripts.js"></script>
 
 </html>
