--- a/pages/findfood.html
+++ b/pages/findfood.html
@@ -357,7 +357,7 @@
     <script type="text/javascript" src="findFoodTwo.js"></script>
     <script type="text/javascript" src="globalFunctions.js"></script>
     <script type="text/javascript" src="notifications.js"></script>
-   <script type="text/javascript" src="mapScripts.js"></script>
+   <!-- <script type="text/javascript" src="mapScripts.js"></script> -->
 </body>
 
 </html>
