--- a/pages/findfood.html
+++ b/pages/findfood.html
@@ -140,6 +140,21 @@
                 </div>
             </div>
             <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#collapseOnlyShow">
+                                Only Show Posts with...
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseOnlyShow" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <label class="checkbox-inline"><input type="checkbox" id = "picturesCheckbox" value="pictures">Pictures</label>
+                            <label class="checkbox-inline"><input type="checkbox" id = "descriptionCheckbox" value="description">Descriptions</label>
+                    </div>
+                </div>
+            </div>
+            <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapseMealType">
@@ -279,6 +294,21 @@
                             <label class="checkbox-inline"><input type="checkbox" value="nutfree">Nut-free</label>
                             <label class="checkbox-inline"><input type="checkbox" value="vegetarian">Vegetarian</label>
                         <label class="checkbox-inline"><input type="checkbox" value="fishfree">Fish-free</label>
+                    </div>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#collapseOnlyShow">
+                                Only Show Posts with...
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseOnlyShow" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <label class="checkbox-inline"><input type="checkbox" id = "picturesCheckbox" value="pictures">Pictures</label>
+                            <label class="checkbox-inline"><input type="checkbox" id = "descriptionCheckbox" value="description">Descriptions</label>
                     </div>
                 </div>
             </div>
