--- a/pages/resetPassword.html
+++ b/pages/resetPassword.html
@@ -29,38 +29,51 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown" id="notificationsButton"><span class="badge badge-error" id="notificationsBadge">
+          <a id="navbar-header" class="navbar-brand" href="">
+            <img id="navbar-logo" src="possibleLogo.png">
+          </a>
+        </div>
+        <div id="navbarContent" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+
+            <li class="dropdown dropdown-notifications">
+              <!--Todo: want to make it pull left. -->
+              <a href="#notifications-panel" class="dropdown-toggle" data-toggle="dropdown" id="notificationsButton"><span class="badge badge-error" id="notificationsBadge">
                             <i class="glyphicon glyphicon-bell"></i>
                             <div id = "counter">
 
                             </div>
                             </span>
-                        </a>
-
-                        <ul class="dropdown-menu" id="notificationsPanel">
-                            <div class="container" id="allNotifs">
+              </a>
+              <ul class="dropdown-menu" id="notificationsPanel">
+                <div class="container" id="allNotifs">
                   <h3>Notifications</h3>
-                    <!-- where the notifications will be put -->
-                    <ul class = "notifications" id = "notificationList">
-                    </ul>
-                </div><!--/.nav-collapse -->
-                </ul>
+                  <!-- where the notifications will be put -->
+                  <ul class="list-unstyled" id="notificationList">
+
+                  </ul>
+                </div>
+                <!--/.nav-collapse -->
+              </ul>
             </li>
             <li><a href="home.html">Home</a></li>
             <li><a href="postManagement.html">Manage Posts</a></li>
             <li><a href="findfood.html">Find Food</a></li>
             <li><a href="loginAndRegister.html">Login &amp; Register</a></li>
-              <li><a href="account.html">Account Settings</a></li>
+            <li><a href="account.html">Account Settings</a></li>
             <li><a href="chat.html">Messages</a></li>
 
 
 
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a id="navBarUsername" href="loginAndRegister.html"></a></li>
+            <li>
+              <a id="navBarUsername" href="loginAndRegister.html"></a>
+            </li>
             <li><a id="btnlogOut" onclick="logOut();" style="display:none;">Log Out</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
+        <!--/.nav-collapse -->
       </div>
     </nav>
 
@@ -87,5 +100,6 @@
     <script type="text/javascript" src="resetPassword.js"></script>
     <script type="text/javascript" src="dataAnalysis.js"></script>
     <script type="text/javascript" src="globalFunctions.js"></script>
+    <script type="text/javascript" src="notifications.js"></script>
   </body>
 </html>
