--- a/pages/findfood.html
+++ b/pages/findfood.html
@@ -323,7 +323,7 @@
             <!-- modal content-->
                 <div class="modal-content">
                     <div class="modal-header" id = "modalHeader">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <button type="button" aria-label="Close" class="close" data-dismiss="modal">&times;</button>
                         <h3 class="modal-title">
                         <center id="modalPostTitle"> TITLE</center>
                         </h3>
@@ -387,7 +387,7 @@
     <script type="text/javascript" src="dataAnalysis.js"></script>
     <script type="text/javascript" src="findFoodTwo.js"></script>
 
-  
+
     <script type="text/javascript" src="notifications.js"></script>
 
     <script type="text/javascript" src="globalFunctions.js"></script>
