Fixed find food map not setting up if location takes too long to load

--- a/pages/maps_prototype.html
+++ b/pages/maps_prototype.html
@@ -8,7 +8,7 @@
 		<script src="/leaflet/leaflet.js"></script>
 		<link href="mapStyle.css" rel="stylesheet">
 	</head>
-	<body onload="setUp()">
+	<body onload="">
 		<div id="mapid"> </div>
 		<script type="text/javascript" src="mapScripts.js"></script>
 	</body>
