new filter option

--- a/pages/findfood.html
+++ b/pages/findfood.html
@@ -151,6 +151,7 @@
                         <div class="panel-body">
                             <label class="checkbox-inline"><input type="checkbox" id = "picturesCheckbox" value="pictures">Pictures</label>
                             <label class="checkbox-inline"><input type="checkbox" id = "descriptionCheckbox" value="description">Descriptions</label>
+                            <label class="checkbox-inline"><input type="checkbox" id = "userRatingCheckbox" value="userRating">User Rating 3+</label>
                     </div>
                 </div>
             </div>
