--- a/pages/chat.html
+++ b/pages/chat.html
@@ -15,7 +15,7 @@
     <!-- Custom styles for this template -->
     <link href="scrumFormat.css" rel="stylesheet">
   </head>
-
+<!-- TODO - TEST MISSING MESSAGES IN PHONE MODE -->
   <body style="overflow: hidden;">
     <!--Bootstrap Navigation Bar-->
     <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
@@ -95,6 +95,7 @@
           <!--div class to be filled with chat rooms once they've been loaded-->
           <div class="list-group" id="rooms" style="overflow-y: auto; height: 86.4vh;"></div>
         </div>
+        <!-- TODO - TEST MISSING MESSAGES IN PHONE MODE -->
         <div class="col-md-10" style="position:relative; height: 82.5vh; overflow-y: auto;" id="messages_div">
           <!--div class to be filled with chat messages once they've been loaded-->
           <ul id="messages"></ul> <!-- List that holds messages displayed on screen -->
