Updated account page

--- a/pages/account.html
+++ b/pages/account.html
@@ -78,7 +78,6 @@
     <!--Initial data when landing on page-->
       <div class="scrumFormat">
         <h1>Scrum Account Settings Page</h1>
-        <p class="lead">Todo:<br>- Account settings such as delete account, modify account details, etc.</p>
 
           <!-- Account settings such as Delete account, Modify account details, etc. -->
 
@@ -86,7 +85,7 @@
 
     </div><!-- /.container -->
 
-    <div class = "col-sm-5">
+    <div align="center" class = "col-sm-5">
         <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title">
