--- a/pages/account.html
+++ b/pages/account.html
@@ -78,16 +78,14 @@
     <!--Initial data when landing on page-->
       <div class="scrumFormat">
         <h1>Scrum Account Settings Page</h1>
-        <p class="lead">Todo:<br>- Account settings such as delete account, modify account details, etc.</p>
 
           <!-- Account settings such as Delete account, Modify account details, etc. -->
 
       </div>
 
     </div><!-- /.container -->
-
-    <div class = "col-sm-5">
-        <div class="panel panel-default">
+   
+        <div class="panel panel-default" style = "margin-left: 30%; margin-right: 30%">
                 <div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" href="#collapseNotifications">
@@ -109,9 +107,10 @@
                     </div>
             </div>
         </div>
+        
 
 
-    </div>
+    
 
 
 
