--- a/pages/findfood.html
+++ b/pages/findfood.html
@@ -152,6 +152,8 @@
                             <label class="checkbox-inline"><input type="checkbox" id = "picturesCheckbox" value="pictures">Pictures</label>
                             <label class="checkbox-inline"><input type="checkbox" id = "descriptionCheckbox" value="description">Descriptions</label>
                             <label class="checkbox-inline"><input type="checkbox" id = "userRatingCheckbox" value="userRating">User Rating 3+</label>
+                            <label class="checkbox-inline"><input type="checkbox" id = "showFromOneWeek" value="userRating">Show Posts From 1 Week</label>
+
                     </div>
                 </div>
             </div>
