--- a/pages/chat.html
+++ b/pages/chat.html
@@ -92,7 +92,8 @@
           <!--div class to be filled with chat rooms once they've been loaded-->
           <div class="list-group" id="rooms" style="overflow-y: auto; max-height: 86.4vh;"></div>
         </div>
-        <!-- TODO - TEST LIMIT WIDTH OF MESSAGES (LONG MESSAGES RUN OFF PAGE -->
+        <!-- TODO - TEST LIMIT WIDTH OF MESSAGES (LONG MESSAGES RUN OFF PAGE) -->
+        <!-- TODO - ALSO LIMIT HEIGHT OF MESSAGES IN PHONE MODE -->
         <div class="col-md-10" style="position:relative; max-height: 82.5vh; overflow-y: auto;" id="messages_div">
           <div><h1>Messages</h1></div>
           <!--div class to be filled with chat messages once they've been loaded-->
