--- a/pages/account.html
+++ b/pages/account.html
@@ -123,8 +123,8 @@
                     }
                 }
         })
-              
-              document.getElementById("showDistanceNearby").innerHTML = ("Currently showing distances up to " + userDistance.toString() + "km");
+              var new = "Currently showing distances up to " + userDistance.toString() + "km";
+              document.getElementById("showDistanceNearby").innerHTML = new;
 
 
 
