--- a/pages/account.html
+++ b/pages/account.html
@@ -123,8 +123,8 @@
                     }
                 }
         })
-              var new = "Currently showing distances up to " + userDistance.toString() + "km";
-              document.getElementById("showDistanceNearby").innerHTML = new;
+              var newone = "Currently showing distances up to " + userDistance + "km";
+              document.getElementById("showDistanceNearby").innerHTML = newone;
 
 
 
