--- a/pages/account.html
+++ b/pages/account.html
@@ -123,6 +123,7 @@
                     }
                 }
         })
+              alert(userDistance);
               var newone = "Currently showing distances up to " + userDistance + "km";
               document.getElementById("showDistanceNearby").innerHTML = newone;
 
